--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
     <link href="css/main_2.8.css" type="text/css" rel="stylesheet">
     <script src="js/particles.min.js" type="text/javascript"></script>
     <script src="js/projects.js" type="text/javascript"></script>
-    <script src="js/main_3.0.js" type="text/javascript"></script>
+    <!--<script src="js/main_3.0.js" type="text/javascript"></script>-->
     <script src="js/main_1.0.js" type="text/javascript"></script>
     <script src="js/typing.js" type="text/javascript"></script>
     <script src="remodal/dist/remodal.min.js"></script>
