--- a/index-b.html
+++ b/index-b.html
@@ -151,20 +151,11 @@ drift.load('bhu384ue373c');
 		</div>
 
 		<div class="margined">
-			<div class="subheading">Achievements</div>
-			<div class="accTitle">University of Waterloo - Top Decile</div>
-			<div class="accDesc">93% average (3.98 GPA) and top decile at the University of Waterloo
-				for Software Engineering.
-			</div>
+			<div class="subheading">Blog</div>
+			<a class="blogTitle" href="https://medium.com/@1ibrahimirfan/first-year-in-waterloo-engineering-62876db88552" target="_blank">First Year in Waterloo Engineering</a>
 			<br>
-			<div class="accTitle">Loran Scholarship Semi-Finalist</div>
-			<div class="accDesc">Recognized in the top 8% of applicants for Canada's most prestigious
-				scholarship.
-			</div>
-			<br>
-			<div class="accTitle">SHAD Valley Alumni</div>
-			<div class="accDesc">One of 750 youth to attend SHAD Valley in 2017. CBC interviewee
-				and participant in the national stage of SHAD Cup.</div>
+
+
 			<div class="subheading" id="notes">Course Notes</div>
 			<div class="accTitle">Fall 2017</div>
 			<div class="accDesc">
