Updated TR description

--- a/index-b.html
+++ b/index-b.html
@@ -101,7 +101,10 @@ drift.load('bhu384ue373c');
 				<div class="position">Thomson Reuters - Software Developer <span class="workDate">May - Aug '18</span></div>
 				<div class="jobDesc">
 					<ul>
-						<li>Coming soon...</li>
+						<li>Refactored AWS CloudFormation scripts to <b>reduce lines of code</b> by over <b>63%.</b></li>
+						<li>Reduced project build time by <b>over 40%</b> by parallelizing API and UI builds, saving over <b>6
+								minutes</b> per build.</li>
+						<li>Fixed AWS ECS crash issue to reduce container CPU Usage by <b>70%</b> and memory by <b>60%.</b></li>
 					</ul>
 				</div>
 				<div class="position">Geotab - Software Developer <span class="workDate">Jun - Aug '17</span></div>
