Added palm-vein project to project section and blog

--- a/index-b.html
+++ b/index-b.html
@@ -157,7 +157,8 @@ drift.load('bhu384ue373c');
 			<div class="subheading">Blog</div>
 			<a class="blogTitle" href="https://medium.com/@1ibrahimirfan/first-year-in-waterloo-engineering-62876db88552" target="_blank">First Year in Waterloo Engineering</a>
 			<br>
-
+			<a class="blogTitle" href="https://www.hackster.io/1ibrahimirfan/low-cost-palm-vein-authentication-system-74e917" target="_blank">Low Cost Palm-Vein Authentication System</a>
+			<br>
 
 			<div class="subheading" id="notes">Course Notes</div>
 			<div class="accTitle">Fall 2017</div>
