--- a/projects-b.html
+++ b/projects-b.html
@@ -106,7 +106,7 @@
 	</div>
 </div>
 <link href="css/main_2.9.css" type="text/css" rel="stylesheet">
-<script src="js/projects.js" type="text/javascript"></script>
+<script src="js/projects_1.0.js" type="text/javascript"></script>
 <script src="js/projectController.js" type="text/javascript"></script>
 <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 <script>
