--- a/index-b.html
+++ b/index-b.html
@@ -101,42 +101,31 @@ drift.load('bhu384ue373c');
 				<div class="position">Thomson Reuters - Software Developer <span class="workDate">May - Aug '18</span></div>
 				<div class="jobDesc">
 					<ul>
-						<li>Refactored AWS CloudFormation scripts to <b>reduce lines of code</b> by over <b>63%.</b></li>
-						<li>Reduced project build time by <b>over 40%</b> by parallelizing API and UI builds, saving over <b>6
-								minutes</b> per build.</li>
-						<li>Fixed AWS ECS crash issue to reduce container CPU Usage by <b>70%</b> and memory by <b>60%.</b></li>
+						<li>Automated project infrastructure and deployments for user identity management using <b>AWS
+								CodePipeline</b> to ensure end-to-end continuous integration, saving numerous hours per week.</li>
+						<li>Reduced build time by <b>over 40%</b> by parallelizing API and UI builds, saving over <b>6 minutes</b> per build.</li>
+						<li>Fixed AWS ECS crashing by caching API calls to reduce container CPU and memory usage by <b>70%+.</b></li>
+						<li>Securely developed many significant API endpoints in <b>.NET</b> for user base functionality.</li>
 					</ul>
 				</div>
 				<div class="position">Geotab - Software Developer <span class="workDate">Jun - Aug '17</span></div>
 				<div class="jobDesc">
 					<ul>
-						<li>Led the development of an HR automation system which drastically
-							reduced redundancy in the hiring process for one of
-							the fastest growing companies in Canada.</li>
-						<li>Significantly increased company efficiency through creating
-							an accurate resume parser and automating emails and
-							calendar events with <b> Google Apps Script.</b></li>
+						<li>Led the development of an HR automation system which drastically reduced redundancy in
+							the company hiring process, saving hours per hire.</li>
+						<li>Significantly increased employee efficiency through creating an accurate resume parser and
+							automating emails with <b>Google Apps Script</b></li>
 					</ul>
 				</div>
 				<br>
-				<div class="position">Freelance - Web Developer <span class="workDate">May '17 - Present</span></div>
-				<div class="jobDesc">
-					<ul>
-						<li>Directly coordinated with clients to develop websites for
-							their small businesses.</li>
-						<li>Created a website for a consulting firm, ITEE Group Canada,
-							to streamline their client-based service using <b>HTML, CSS, JS, and PHP.</b></li>
-					</ul>
-				</div>
-				<br>
-				<div class="position">ViceroyMedia - Software Developer <span class="workDate">Jun '16 - Feb '17 </span></div>
+				<div class="position">ViceroyMedia - Software Developer <span class="workDate">Jun '16 - Dec '17 </span></div>
 				<div class="jobDesc">
 					<ul>
 						<li>Collaborated with a team to develop an Exam Network web
 							application for the University of Guelph.</li>
 						<li>Implemented a file system for course materials using <b>JavaScript</b>,
 							including viewing, uploading, and downloading files.</b>
-					</li>
+						<li>Integrated Facebook Login API for <b>over 5000 students</b> to be able to login to the application.</li>
 				</ul>
 			</div>
 			<br>
