Added notes for 2018 Fall

--- a/index-b.html
+++ b/index-b.html
@@ -95,8 +95,7 @@ drift.load('bhu384ue373c');
 		<div class="content remodal-bg" id="scroll">
 			<div class="margined">
 				<div class="subheading">About Me</div>
-				<div class="paragraph">Hi! I'm a software developer studying Software Engineering at the
-					University of Waterloo.</div>
+				<div class="paragraph">Hi! I'm a software developer studying Software Engineering at the University of Waterloo.</div>
 				<div class="subheading">Work Experience</div>
 				<div class="position">Thomson Reuters - Software Developer <span class="workDate">May - Aug '18</span></div>
 				<div class="jobDesc">
@@ -151,20 +150,19 @@ drift.load('bhu384ue373c');
 			<br>
 
 			<div class="subheading" id="notes">Course Notes</div>
-			<div class="accTitle">Fall 2017</div>
 			<div class="accDesc">
 				<a class="noteLink" href="/notes/MATH115.pdf" target="_blank">MATH 115 - Linear Algebra for Engineering</a>
 				<br><a class="noteLink" href="/notes/MATH117.pdf" target="_blank">MATH 117 - Calculus 1 for Engineering</a>
 				<br><a class="noteLink" href="/notes/MATH135.pdf" target="_blank">MATH 135 - Algebra for Honours Mathematics</a>
 				<br><a class="noteLink" href="/notes/ECE105.pdf" target="_blank">ECE 105 - Classical Mechanics</a>
-			</div>
-
-			<div class="accTitle">Winter 2018</div>
-			<div class="accDesc">
-				<a class="noteLink" href="/notes/MATH119.pdf" target="_blank">MATH 119 - Calculus 2 for Engineering</a>
+				<br><a class="noteLink" href="/notes/MATH119.pdf" target="_blank">MATH 119 - Calculus 2 for Engineering</a>
 				<br><a class="noteLink" href="/notes/ECE106.pdf" target="_blank">ECE 106 - Electricity and Magnetism</a>
 				<br><a class="noteLink" href="/notes/ECE140.pdf" target="_blank">ECE 140 - Linear Circuits</a>
 				<br><a class="noteLink" href="/notes/ECE124.pdf" target="_blank">ECE 124 - Digital Circuits and Systems</a>
+				<br><a class="noteLink" href="/notes/STAT206.pdf" target="_blank">STAT 206 - Statistics for Software Engineering</a>
+				<br><a class="noteLink" href="/notes/CS241e.pdf" target="_blank">CS 241e - Foundations of Sequential Programs (Enriched)</a>
+				<br><a class="noteLink" href="/notes/ECE222.pdf" target="_blank">ECE 222 - Digital Computers</a>
+				<br><a class="noteLink" href="/notes/SE212.pdf" target="_blank">SE 212 - Logic and Computation</a>
 			</div>
 		</div>
 
