Changed resume, etc

--- a/index-b.html
+++ b/index-b.html
@@ -36,10 +36,10 @@
 					</div>
 					<div class="title small">Software Developer</div>
 					<div class="buttons">
-						<a href="https://www.linkedin.com/in/ibrahimirfan/" target="_blank"> <img class="social" src="img/linkedin.png" alt="LinkedIn">                            </a>
+						<a href="https://www.linkedin.com/in/ibrahimirfan/" target="_blank"><img class="social" src="img/linkedin.png" alt="LinkedIn"></a>
 						<a href="https://github.com/IbrahimIrfan" target="_blank">
-							<img class="social" src="img/github.png" alt="GitHub">                            </a>
-						<a href="/resume.pdf" target="_blank"> <img class="social" src="img/resume.png" alt="Resume">                            </a>
+							<img class="social" src="img/github.png" alt="GitHub"></a>
+						<a href="/resume.pdf" target="_blank"><img class="social" src="img/resume.png" alt="Resume"></a>
 					</div>
 					<hr width="75%" style="margin-bottom: 20px !important;">
 				</center>
@@ -53,36 +53,10 @@
 				<div class="subheading">About Me</div>
 				<div class="paragraph">Hi! I'm a software developer studying Software Engineering at the University of Waterloo.</div>
 				<div class="subheading">Work Experience</div>
-				<div class="position">Thomson Reuters - Software Developer <span class="workDate">May - Aug '18</span></div>
-				<div class="jobDesc">
-					<ul>
-						<li>Automated project infrastructure and deployments for user identity management using <b>AWS 
-								CodePipeline</b> to ensure end-to-end continuous integration, saving numerous hours per week.</li>
-						<li>Reduced build time by <b>over 40%</b> by parallelizing API and UI builds, saving over <b>6 minutes</b> per build.</li>
-						<li>Fixed AWS ECS crashing by caching API calls to reduce container CPU and memory usage by <b>70%+.</b></li>
-						<li>Securely developed many significant API endpoints in <b>.NET</b> for user base functionality.</li>
-					</ul>
-				</div>
-				<br>
-				<div class="position">Geotab - Software Developer <span class="workDate">Jun - Aug '17</span></div>
-				<div class="jobDesc">
-					<ul>
-						<li>Led the development of an HR automation system which drastically reduced redundancy in
-							the company hiring process, saving hours per hire.</li>
-						<li>Significantly increased employee efficiency through creating an accurate resume parser and
-							automating emails with <b>Google Apps Script</b></li>
-					</ul>
-				</div>
-				<br>
-				<div class="position">ViceroyMedia - Software Developer <span class="workDate">Jun '16 - Dec '17 </span></div>
-				<div class="jobDesc">
-					<ul>
-						<li>Collaborated with a team to develop an Exam Network web
-							application for the University of Guelph.</li>
-						<li>Implemented a file system for course materials using <b>JavaScript</b>,
-							including viewing, uploading, and downloading files.</b>
-						<li>Integrated Facebook Login API for <b>over 5000 students</b> to be able to login to the application.</li>
-				</ul>
+				<div class="position">Stripe <span class="workDate">Jan - Apr '19</span></div>
+				<div class="position">Thomson Reuters <span class="workDate">May - Aug '18</span></div>
+				<div class="position">Geotab <span class="workDate">Jun - Aug '17</span></div>
+				<div class="position">ViceroyMedia <span class="workDate">Jun '16 - Dec '17 </span></div>
 			</div>
 			<br>
 			<div class="subheading">Projects</div>
@@ -99,7 +73,7 @@
 		</div>
 
 		<div class="margined">
-			<div class="subheading">Blog</div>
+			<div class="subheading">Writing</div>
 			<a class="blogTitle" href="https://medium.com/@1ibrahimirfan/first-year-in-waterloo-engineering-62876db88552" target="_blank">First Year in Waterloo Engineering</a>
 			<br>
 			<a class="blogTitle" href="https://www.hackster.io/1ibrahimirfan/low-cost-palm-vein-authentication-system-74e917" target="_blank">Low Cost Palm-Vein Authentication System</a>
