--- a/index-b.html
+++ b/index-b.html
@@ -57,7 +57,7 @@
 				<div class="position">Stripe <span class="workDate">Jan - Apr '19</span></div>
 				<div class="position">Thomson Reuters <span class="workDate">May - Aug '18</span></div>
 				<div class="position">Geotab <span class="workDate">Jun - Aug '17</span></div>
-				<div class="position">ViceroyMedia <span class="workDate">Jun '16 - Dec '17 </span></div>
+				<div class="position">ViceroyMedia <span class="workDate">Jun - Dec '16 </span></div>
 			</div>
 			<br>
 			<div class="subheading">Projects</div>
