--- a/index-b.html
+++ b/index-b.html
@@ -53,6 +53,7 @@
 				<div class="subheading">About Me</div>
 				<div class="paragraph">Hi! I'm a software developer studying Software Engineering at the University of Waterloo.</div>
 				<div class="subheading">Work Experience</div>
+				<div class="position">Facebook <span class="workDate">May - Aug '20</span></div>
 				<div class="position">Google <span class="workDate">Sep - Dec '19</span></div>
 				<div class="position">Stripe <span class="workDate">Jan - Apr '19</span></div>
 				<div class="position">Thomson Reuters <span class="workDate">May - Aug '18</span></div>
