--- a/index.html
+++ b/index.html
@@ -1,1 +1,57 @@
-<!DOCTYPE HTML><html><head><title>Ibrahim Irfan</title><meta name="viewport" content="width=device-width, initial-scale=1"><meta name="description" content="Software Developer - Waterloo Software Engineering '22'"/><link rel="shortcut icon" type="image/x-icon" href="favicon.ico"><style>*{margin:0;padding:0}</style><link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"><link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css"> <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script> <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.9/angular-animate.min.js"></script> </head><body ng-app="portfolio" ng-controller="main"><div ng-hide="loading" class="loader-wrapper"><div class="loader"><div class="inner one"></div><div class="inner two"></div><div class="inner three"></div></div></div><div class="everything-wrapper"><div class="fluid-ratio-resize" id="particles-js"><div class="headerContent"><center><hr width="75%"> <img class="profileImg" src="img/headshot.jpg" alt="Ibrahim Irfan"><div class="name big typing"> <span class="txt-rotate" data-period="500" data-rotate='["Ibrahim Irfan"]'></span> <span class="blinking-cursor">|</span></div><div class="title small">Software Developer</div><div class="buttons"> <a href="https://www.linkedin.com/in/ibrahimirfan/" target="_blank"><img class="social" src="img/linkedin.png" alt="LinkedIn"></a> <a href="https://github.com/IbrahimIrfan" target="_blank"> <img class="social" src="img/github.png" alt="GitHub"></a> <a href="/resume.pdf" target="_blank"><img class="social" src="img/resume.png" alt="Resume"></a></div><hr width="75%" style="margin-bottom: 20px !important;"></center></div><div id="downArrowWrapper"><center> <img ng-init="currentArrow=0" ng-click="scrollTo()" ng-mouseover="currentArrow = 1" ng-mouseleave="currentArrow = 0" id="downArrow" src="{{arrows[currentArrow]}}"></center></div></div><div class="content remodal-bg" id="scroll"><div class="margined"><div class="subheading">About Me</div><div class="paragraph">Hi! I'm a software developer studying Software Engineering at the University of Waterloo.</div><div class="subheading">Work Experience</div><div class="position">Facebook <span class="workDate">May - Aug '20</span></div><div class="position">Google <span class="workDate">Sep - Dec '19</span></div><div class="position">Stripe <span class="workDate">Jan - Apr '19</span></div><div class="position">Thomson Reuters <span class="workDate">May - Aug '18</span></div><div class="position">Geotab <span class="workDate">Jun - Aug '17</span></div><div class="position">ViceroyMedia <span class="workDate">Jun - Dec '16 </span></div></div> <br><div class="subheading">Projects</div></div><div class="mdl-grid mdl-container"><div class="mdl-cell mdl-cell--4-col" ng-repeat="p in projects | orderBy: 'order'"><div project="{{p.id}}" class="mdl-card-square mdl-card" ng-click="projectClicked(p.id)"> <img src="img/thumbnails/{{p.thumbnail}}" class="projectImg" alt="{{p.title}}"><center> <figcaption>{{p.title}}</figcaption></center></div></div></div><div class="margined"><div class="subheading">Writing</div> <a class="blogTitle" href="https://medium.com/@1ibrahimirfan/first-year-in-waterloo-engineering-62876db88552" target="_blank">First Year in Waterloo Engineering</a> <br> <a class="blogTitle" href="https://www.hackster.io/1ibrahimirfan/low-cost-palm-vein-authentication-system-74e917" target="_blank">Low Cost Palm-Vein Authentication System</a> <br></div></div></div></div><div class="footerContent"><center><div class="footer big"><center> <span>Need a developer?</span><br><br><span class="contactMe"> <a href="mailto:1ibrahimirfan@gmail.com" target="_blank" class="btn">START THE CONVERSATION</a></span></center></div></center></div></div><link href="css/main_2.9.css" type="text/css" rel="stylesheet"> <script src="js/particles.min.js" type="text/javascript"></script> <script src="js/projects_1.1.js" type="text/javascript"></script> <script src="js/main_1.2.js" type="text/javascript"></script> <script src="js/typing.js" type="text/javascript"></script> <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script> <script>(function(i,s,o,g,r,a,m) {i['GoogleAnalyticsObject']=r;i[r]=i[r]||function() {(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');ga('create','UA-100410300-1','auto');ga('send','pageview');</script> </body></html>
+<!DOCTYPE HTML>
+<html>
+
+<head>
+	<title>Ibrahim Irfan</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="Software Developer - Waterloo Software Engineering 2022" />
+	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<link rel="stylesheet" href="css/main.css">
+</head>
+
+<body>
+	<div class="nav"></div>
+	<div class="header">
+		<img id="profile-img" src="img/headshot.jpg">
+		<div class="name">Ibrahim Irfan</div>
+	</div>
+
+	<div class="intro">
+		Hi! I'm Ibrahim, a Software Engineering student at the University of Waterloo. <br><br>
+
+		Currently, I'm working at <img class="company-icon fb" src="img/fb.png"> Facebook on the Search Page Rank team.
+		Previously, I was on Assistant Media at <img class="company-icon google" src="img/google.png"> Google,
+		and Application Security at <img class="company-icon stripe" src="img/stripe.png">Stripe.
+	</div>
+
+	<div class="section">
+		<div class="subheading">Writing ✏</div>
+		<div class="blog-list">
+			<img class="card-img-top" src="img/thumbnails/palm.png" alt="Palm Vein Authentication">
+			<div class="card blog-preview">
+				<div class="card-body row">
+					<div class="blog-details">
+						<h5 class="card-title">How to Build a Palm Vein Authentication System</h5>
+						<h6 class="card-subtitle mb-2 text-muted"></h6>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+
+	<script src="https://kit.fontawesome.com/f0ce523916.js" crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+		crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+		integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+		crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+		integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+		crossorigin="anonymous"></script>
+</body>
+
+</html>
