--- a/index.html
+++ b/index.html
@@ -29,12 +29,32 @@
 	<div class="section">
 		<div class="subheading">Writing ✏</div>
 		<div class="blog-list">
-			<img class="card-img-top" src="img/thumbnails/palm.png" alt="Palm Vein Authentication">
+			<!-- Palm Vein -->
 			<div class="card blog-preview">
 				<div class="card-body row">
+					<img class="blog-img" src="img/thumbnails/palm.png" alt="Palm Vein Authentication">
 					<div class="blog-details">
-						<h5 class="card-title">How to Build a Palm Vein Authentication System</h5>
-						<h6 class="card-subtitle mb-2 text-muted"></h6>
+						<h5 class="card-title blog-title">
+							How to Build a Palm Vein Authentication System
+						</h5>
+						<h6 class="card-subtitle mb-2 text-muted blog-subtitle">
+							Learn how to build a cheap palm vein authentication system with a Raspberry Pi.
+						</h6>
+					</div>
+				</div>
+			</div>
+
+			<!-- First Year in UW -->
+			<div class="card blog-preview">
+				<img class="card-img-top" src="img/thumbnails/uw.jpeg" alt="First Year in Waterloo Engineering">
+				<div class="card-body row">
+					<div class="blog-details">
+						<h5 class="card-title blog-title">
+							First Year in Waterloo Engineering
+						</h5>
+						<h6 class="card-subtitle mb-2 text-muted blog-subtitle">
+							Reflections at the 1 year mark.
+						</h6>
 					</div>
 				</div>
 			</div>
