--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
 		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<link rel="stylesheet" href="css/index.css">
 	<link rel="stylesheet" href="css/main.css">
 </head>
 
@@ -40,14 +41,15 @@
 						<h6 class="card-subtitle mb-2 text-muted blog-subtitle">
 							Learn how to build a cheap palm vein authentication system with a Raspberry Pi.
 						</h6>
+						<a href="#" class="card-link">Read More</a>
 					</div>
 				</div>
 			</div>
 
 			<!-- First Year in UW -->
 			<div class="card blog-preview">
-				<img class="card-img-top" src="img/thumbnails/uw.jpeg" alt="First Year in Waterloo Engineering">
 				<div class="card-body row">
+				<img class="blog-img" src="img/thumbnails/uw.jpeg" alt="First Year in Waterloo Engineering">
 					<div class="blog-details">
 						<h5 class="card-title blog-title">
 							First Year in Waterloo Engineering
@@ -55,6 +57,7 @@
 						<h6 class="card-subtitle mb-2 text-muted blog-subtitle">
 							Reflections at the 1 year mark.
 						</h6>
+						<a href="#" class="card-link">Read More</a>
 					</div>
 				</div>
 			</div>
@@ -62,7 +65,6 @@
 	</div>
 
 
-	<script src="https://kit.fontawesome.com/f0ce523916.js" crossorigin="anonymous"></script>
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
 		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
 		crossorigin="anonymous"></script>
