--- a/writing.html
+++ b/writing.html
@@ -21,7 +21,7 @@
 			<a class="nav-link" href="writing.html">Writing</a>
 		</li>
 		<li class="nav-item">
-			<a class="nav-link" href="#contact">Contact</a>
+			<a class="nav-link" href="contact.html">Contact</a>
 		</li>
 	</ul>
 
@@ -79,6 +79,10 @@
 				</div>
 			</div>
 		</div>
+    </div>
+    
+    <div class="footer">
+		© Ibrahim Irfan 2020
 	</div>
 
 	<script src="https://kit.fontawesome.com/f0ce523916.js" crossorigin="anonymous"></script>
