--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			<a class="nav-link" href="writing.html">Writing</a>
 		</li>
 		<li class="nav-item">
-			<a class="nav-link" href="#contact">Contact</a>
+			<a class="nav-link" href="contact.html">Contact</a>
 		</li>
 	</ul>
 
@@ -100,10 +100,8 @@
 
 	<a href="writing.html" class="btn btn-outline-primary see-all">See All</a>
 
-
-	<div class="section" id="contact">
-		<div class="subheading">Contact 📫</div>
-		<a href="mailto:1ibrahimirfan@gmail.com">Get in touch!</a>
+	<div class="footer">
+		© Ibrahim Irfan 2020
 	</div>
 
 	<script src="https://kit.fontawesome.com/f0ce523916.js" crossorigin="anonymous"></script>
