--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	</ul>
 
 	<div class="header">
-		<img id="profile-img" src="img/headshot.jpg">
+		<img id="profile-img" src="img/me.jpg">
 		<div class="name">Ibrahim Irfan</div>
 	</div>
 
@@ -48,7 +48,7 @@
 			<!-- Freelance -->
 			<div class="card blog-preview">
 				<div class="card-body row">
-					<img class="blog-img" src="img/thumbnails/freelance.jpeg" alt="Freelancing">
+					<img class="blog-img" src="img/freelance.jpeg" alt="Freelancing">
 					<div class="blog-details">
 						<h5 class="card-title blog-title">
 							The Wonderfully Weird World of Freelancing
@@ -66,7 +66,7 @@
 			<!-- Palm Vein -->
 			<div class="card blog-preview">
 				<div class="card-body row">
-					<img class="blog-img" src="img/thumbnails/palm.png" alt="Palm Vein Authentication">
+					<img class="blog-img" src="img/palm.png" alt="Palm Vein Authentication">
 					<div class="blog-details">
 						<h5 class="card-title blog-title">
 							How to Build a Palm Vein Authentication System
@@ -83,7 +83,7 @@
 			<!-- First Year in UW -->
 			<div class="card blog-preview">
 				<div class="card-body row">
-					<img class="blog-img" src="img/thumbnails/uw.jpeg" alt="First Year in Waterloo Engineering">
+					<img class="blog-img" src="img/uw.jpeg" alt="First Year in Waterloo Engineering">
 					<div class="blog-details">
 						<h5 class="card-title blog-title">
 							First Year in Waterloo Engineering
