--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 <body>
 	<ul class="nav justify-content-center">
 		<li class="nav-item">
-			<a class="nav-link active" href="index.html">Home</a>
+			<a class="nav-link active" href="/">Home</a>
 		</li>
 		<li class="nav-item">
-			<a class="nav-link" href="writing.html">Writing</a>
+			<a class="nav-link" href="/writing">Writing</a>
 		</li>
 		<li class="nav-item">
-			<a class="nav-link" href="contact.html">Contact</a>
+			<a class="nav-link" href="/contact">Contact</a>
 		</li>
 	</ul>
 
