--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 							Recalling my unconventional freelance experiences, including close calls with tax fraud, the
 							next Uber, and the adult film industry.
 						</h6>
-						<a href="blog/the-wonderfully-weird-world-of-freelancing.html" class="card-link">Read More</a>
+						<a href="blog/the-wonderfully-weird-world-of-freelancing" class="card-link">Read More</a>
 					</div>
 				</div>
 			</div>
@@ -74,7 +74,7 @@
 						<h6 class="card-subtitle mb-2 text-muted blog-subtitle">
 							Learn how to build a cheap palm vein authentication system with a Raspberry Pi.
 						</h6>
-						<a href="blog/how-to-build-a-palm-vein-authentication-system.html" class="card-link">Read
+						<a href="blog/how-to-build-a-palm-vein-authentication-system" class="card-link">Read
 							More</a>
 					</div>
 				</div>
@@ -98,7 +98,7 @@
 		</div>
 	</div>
 
-	<a href="writing.html" class="btn btn-outline-primary see-all">See All</a>
+	<a href="writing" class="btn btn-outline-primary see-all">See All</a>
 
 	<div class="footer">
 		© Ibrahim Irfan 2020
