--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 						<h6 class="card-subtitle mb-2 text-muted blog-subtitle">
 							Reflections at the 1 year mark.
 						</h6>
-						<a href="#" class="card-link">Read More</a>
+						<a href="/first-year-in-waterloo-engineering" class="card-link">Read More</a>
 					</div>
 				</div>
 			</div>
