add email signup

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 	</div>
 
 	<div class="section">
-		<div class="subheading">Writing &#9999;</div>
+		<div class="subheading">Writing 🖊</div>
 		<div class="blog-list">
 			<!-- Freelance -->
 			<div class="card blog-preview">
