--- a/writing.html
+++ b/writing.html
@@ -26,7 +26,7 @@
 	</ul>
 
 	<div class="first-section">
-		<div class="subheading">Writing &#9999;</div>
+		<div class="subheading">Writing 🖊</div>
 		<div class="blog-list">
 			<!-- Freelance -->
 			<div class="card blog-preview">
