add big o and refactor blog format'

--- a/index.html
+++ b/index.html
@@ -44,57 +44,7 @@
 
 	<div class="section">
 		<div class="subheading">Writing 🖊</div>
-		<div class="blog-list">
-			<!-- Freelance -->
-			<div class="card blog-preview">
-				<div class="card-body row">
-					<img class="blog-img" src="img/freelance.jpeg" alt="Freelancing">
-					<div class="blog-details">
-						<h5 class="card-title blog-title">
-							The Wonderfully Weird World of Freelancing
-						</h5>
-						<h6 class="card-subtitle mb-2 text-muted blog-subtitle">
-							Recalling my unconventional freelance experiences, including close calls with tax fraud, the
-							next Uber, and the adult film industry.
-						</h6>
-						<a href="blog/the-wonderfully-weird-world-of-freelancing" class="card-link">Read More</a>
-					</div>
-				</div>
-			</div>
-
-
-			<!-- Palm Vein -->
-			<div class="card blog-preview">
-				<div class="card-body row">
-					<img class="blog-img" src="img/palm.png" alt="Palm Vein Authentication">
-					<div class="blog-details">
-						<h5 class="card-title blog-title">
-							How to Build a Palm Vein Authentication System
-						</h5>
-						<h6 class="card-subtitle mb-2 text-muted blog-subtitle">
-							Learn how to build a cheap palm vein authentication system with a Raspberry Pi.
-						</h6>
-						<a href="blog/palm-vein-authentication" class="card-link">Read
-							More</a>
-					</div>
-				</div>
-			</div>
-
-			<!-- First Year in UW -->
-			<div class="card blog-preview">
-				<div class="card-body row">
-					<img class="blog-img" src="img/uw.jpeg" alt="First Year in Waterloo Engineering">
-					<div class="blog-details">
-						<h5 class="card-title blog-title">
-							First Year in Waterloo Engineering
-						</h5>
-						<h6 class="card-subtitle mb-2 text-muted blog-subtitle">
-							Reflections at the 1 year mark.
-						</h6>
-						<a href="blog/first-year-in-waterloo-engineering" class="card-link">Read More</a>
-					</div>
-				</div>
-			</div>
+		<div class="blog-list" id="blog-list-partial">
 		</div>
 	</div>
 
@@ -104,6 +54,8 @@
 		© Ibrahim Irfan 2020
 	</div>
 
+	<script type="text/javascript" src="js/blog.js"></script>
+	<script type="text/javascript" src="js/index.js"></script>
 	<script src="https://kit.fontawesome.com/f0ce523916.js" crossorigin="anonymous"></script>
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
 		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
