add resume critique request

--- a/contact.html
+++ b/contact.html
@@ -28,6 +28,7 @@
 	<div class="first-section">
 		<div class="subheading">Contact 📫</div>
 		<a href="mailto:1ibrahimirfan@gmail.com">Get in touch!</a> Always happy to chat.
+		Resume critique requests are welcome as well.
 	</div>
 
 	<div class="footer">
