--- a/writing.html
+++ b/writing.html
@@ -13,18 +13,6 @@
 </head>
 
 <body>
-	<ul class="nav justify-content-center">
-		<li class="nav-item">
-			<a class="nav-link active" href="/">Home</a>
-		</li>
-		<li class="nav-item">
-			<a class="nav-link" href="/writing">Writing</a>
-		</li>
-		<li class="nav-item">
-			<a class="nav-link" href="/contact">Contact</a>
-		</li>
-	</ul>
-
 	<div class="first-section">
 		<div class="subheading">Writing 🖊</div>
 		<div class="blog-list" id="blog-list-full">
@@ -35,6 +23,7 @@
 		© Ibrahim Irfan 2020
 	</div>
 
+	<script type="text/javascript" src="js/nav.js"></script>
 	<script type="text/javascript" src="js/blog.js"></script>
 	<script type="text/javascript" src="js/writing.js"></script>
 	<script src="https://kit.fontawesome.com/f0ce523916.js" crossorigin="anonymous"></script>
