--- a/contact.html
+++ b/contact.html
@@ -13,18 +13,6 @@
 </head>
 
 <body>
-	<ul class="nav justify-content-center">
-		<li class="nav-item">
-			<a class="nav-link active" href="/">Home</a>
-		</li>
-		<li class="nav-item">
-			<a class="nav-link" href="/writing">Writing</a>
-		</li>
-		<li class="nav-item">
-			<a class="nav-link" href="/contact">Contact</a>
-		</li>
-	</ul>
-
 	<div class="first-section">
 		<div class="subheading">Contact 📫</div>
 		<a href="mailto:1ibrahimirfan@gmail.com">Get in touch!</a> Always happy to chat.
@@ -36,6 +24,7 @@
 	</div>
 
 
+	<script type="text/javascript" src="js/nav.js"></script>
 	<script src="https://kit.fontawesome.com/f0ce523916.js" crossorigin="anonymous"></script>
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
 		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
