--- a/index.html
+++ b/index.html
@@ -13,18 +13,6 @@
 </head>
 
 <body>
-	<ul class="nav justify-content-center">
-		<li class="nav-item">
-			<a class="nav-link active" href="/">Home</a>
-		</li>
-		<li class="nav-item">
-			<a class="nav-link" href="/writing">Writing</a>
-		</li>
-		<li class="nav-item">
-			<a class="nav-link" href="/contact">Contact</a>
-		</li>
-	</ul>
-
 	<div class="header">
 		<img id="profile-img" src="img/me.jpg">
 		<div class="name">Ibrahim Irfan</div>
@@ -54,6 +42,7 @@
 		© Ibrahim Irfan 2020
 	</div>
 
+	<script type="text/javascript" src="js/nav.js"></script>
 	<script type="text/javascript" src="js/blog.js"></script>
 	<script type="text/javascript" src="js/index.js"></script>
 	<script src="https://kit.fontawesome.com/f0ce523916.js" crossorigin="anonymous"></script>
