--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
 	<title>Ibrahim Irfan - Writing</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Software Developer - Waterloo Software Engineering 2022" />
+	<meta name="description" content="I'm Ibrahim, a Software Engineering Student @ UWaterloo." />
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
 		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
