add course link

--- a/courses.html
+++ b/courses.html
@@ -14,7 +14,7 @@
 
 <body>
     <div class="first-section">
-        <div class="subheading">Courses </div>
+        <div class="subheading">Courses 📕</div>
         <div class="card blog-preview">
             <div class="card-body row">
                 <div class="blog-img-wrapper">
