--- a/courses.html
+++ b/courses.html
@@ -24,7 +24,7 @@
                     <h5 class="card-title blog-title">
                         Coding Interview Essentials: Data Structures & Algorithms
                     </h5>
-                    <a href="https://udemy.com/course/coding-interview-essentials" class="card-link">
+                    <a href="https://www.udemy.com/course/coding-interview-essentials/?referralCode=C7E74BBC57160A12CD0A" class="card-link">
                         View
                     </a>
                 </div>
