--- a/notes.html
+++ b/notes.html
@@ -14,7 +14,7 @@
 
 <body>
     <div class="first-section">
-        <div class="subheading">Notes</div>
+        <div class="subheading">Notes 📚</div>
         <ul id="notes-list"></ul>
     </div>
 
