--- a/courses.html
+++ b/courses.html
@@ -24,8 +24,14 @@
                     <h5 class="card-title blog-title">
                         Coding Interview Essentials: Data Structures & Algorithms
                     </h5>
-                    <a href="https://www.udemy.com/course/coding-interview-essentials/?referralCode=C7E74BBC57160A12CD0A" class="card-link">
-                        View
+                    <a href="https://www.udemy.com/course/coding-interview-essentials/?referralCode=C7E74BBC57160A12CD0A"
+                        class="card-link">
+                        <img src="img/udemy.svg" class="inline-icon" style="margin-right: 10px">
+                        View on Udemy
+                    </a>
+                    <a href="https://skl.sh/2OoyZ97" class="card-link">
+                        <img src="img/skillshare.png" class="inline-icon" style="width: 40px">
+                        View on Skillshare
                     </a>
                 </div>
             </div>
