--- a/courses.html
+++ b/courses.html
@@ -26,10 +26,11 @@
                     </h5>
                     <a href="https://www.udemy.com/course/coding-interview-essentials/?referralCode=C7E74BBC57160A12CD0A"
                         class="card-link">
-                        <img src="img/udemy.svg" class="inline-icon" style="margin-right: 10px">
+                        <img src="img/udemy.svg" class="inline-icon" style="margin-right: 20px">
                         View on Udemy
                     </a>
-                    <a href="https://skl.sh/2OoyZ97" class="card-link">
+                    <br>
+                    <a href="https://skl.sh/2OoyZ97" class="card-link" style="margin-top: 10px;">
                         <img src="img/skillshare.png" class="inline-icon" style="width: 40px">
                         View on Skillshare
                     </a>
